
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-xbrl"
version = "3.0.0"
description = "Parser for parsing XBRL and iXBRL files (instance documents, taxonomy schemas, taxonomy linkbases)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [{ name = "Manuel Schmidt", email = "hello@schmidt-manuel.de" }]
urls = { Homepage = "https://github.com/manusimidt/py-xbrl" }
dependencies = [
    "requests", # Used for fetching XML / XBRL / html files over HTTP(S)
    "urllib3" # Used for HTTP connection retries
]
keywords = [
    "XBRL",
    "iXBRL",
    "XML",
    "Financial",
    "Accounting",
    "Taxonomy",
    "Parser",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Text Processing :: Markup :: XML",
]


[project.optional-dependencies]
dev = [
    "ruff", # Used for linting
    "mypy", # Used for static type checking
    "pytest", # Used for unit testing
    "build", # Used to build distributions
    "twine", # Used to check distrubutions and upload to PyPI
    "types-requests", # Types for requests libary (needed for mypy)
    "python-dotenv", # Used to load environment variables from .env files (for testing)
    "psycopg2-binary" # Database adapter for PostgreSQL (used only in dev, to query edgar filings)
]


[tool.setuptools.packages.find]
include = ["xbrl*"]


[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true